Fixed: element wrappers, styles, alignments

--- a/client/src/components/Generics/Modals/Modal.module.scss
+++ b/client/src/components/Generics/Modals/Modal.module.scss
@@ -15,6 +15,8 @@
   padding: 1rem;
   width: fit-content;
   height: fit-content;
+  min-width: 20vw;
+  min-height: 30vh;
   
   border-radius: 5px;
   color: color.$light1;
